# Mydemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lee/edu/mydemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ADist/: ADist.cpp  ADist.h  ADist_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
app/src/main/cpp/MyCic_16/: MyCic_16.cpp  MyCic_16.h  MyCic_16_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
app/src/main/cpp/mycic/: CICDecimator.cpp  CICDecimator.h  FIRCombFilter.cpp  FIRCombFilter.h  MyCic.cpp  MyCic.h  MyCic_initialize.cpp  MyCic_initialize.h  MyCic_terminate.cpp  MyCic_terminate.h  MyCic_types.h  SystemCore.cpp  SystemCore.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  step.cpp  step.h
app/src/main/cpp/sup/: LEVD.cpp  LEVD.h  Last.h  Peak.cpp  Peak.h  support.cpp
app/src/main/java/com/lee/edu/mydemo/: FrequencyPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lee/edu/mydemo/: ExampleUnitTest.java
